<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CharityDonationFragment">

    <TextView
        android:id="@+id/amountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:layout_marginTop="20dp"
        style="@style/DonationItem" />

    <EditText
        android:id="@+id/amount"
        android:hint="@string/amount_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/amountTitle"
        style="@style/DonationItem"
        android:autofillHints=""
        tools:targetApi="o">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/cardNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:layout_below="@+id/amount"
        style="@style/DonationItem" />

    <co.omise.android.ui.CreditCardEditText
        android:id="@+id/cardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardNumberTitle"
        style="@style/DonationItem" />

    <TextView
        android:id="@+id/cardNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_name"
        android:layout_below="@+id/cardNumber"
        style="@style/DonationItem" />

    <co.omise.android.ui.CardNameEditText
        android:id="@+id/cardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardNameTitle"
        style="@style/DonationItem" />

    <TextView
        android:id="@+id/expiryDateTitle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date"
        android:layout_below="@+id/cardName"
        style="@style/DonationItem" />

    <co.omise.android.ui.ExpiryDateEditText
        android:id="@+id/expiryDate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expiryDateTitle"
        style="@style/DonationItem"
        android:hint="@string/expiry_date_hint"/>

    <TextView
        android:id="@+id/securityCodeTitle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/security_code"
        android:layout_toEndOf="@+id/expiryDateTitle"
        android:layout_below="@+id/cardName" />

    <co.omise.android.ui.SecurityCodeEditText
        android:id="@+id/securityCode"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/expiryDate"
        android:layout_below="@+id/securityCodeTitle"
        android:hint="@string/security_code_hint" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@+id/expiryDate"
        android:layout_centerHorizontal="true"
        android:enabled="false" />

    <ProgressBar
        android:id="@+id/loadingView"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardNameTitle"
        android:layout_centerHorizontal="true" />

</RelativeLayout>