<resources>
    <string name="app_name">tmobile</string>

    <string name="amount">Payment Amount</string>
    <string name="amount_hint">THB</string>
    <string name="card_number">Card Number</string>
    <string name="card_name">Name on card</string>
    <string name="expiry_date">Expiry date</string>
    <string name="expiry_date_hint">MM/YY</string>
    <string name="security_code">Security code</string>
    <string name="security_code_hint">CCV</string>
    <string name="submit">Submit</string>
    <string name="payment_desc">Your payment is complete.</string>
    <string name="go_home">Go Home</string>

    <string name="an_error_occurred_while_loading_data">An error occurred while loading data</string>
</resources>
