<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SuccessFragment">

    <TextView
        android:id="@+id/paymentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@null"
        style="@style/PaymentTitle"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/paymentDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_desc"
        android:layout_below="@+id/paymentTitle"
        style="@style/PaymentDesc"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/goHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_home"
        android:layout_below="@+id/paymentDesc"
        android:layout_centerHorizontal="true" />

</RelativeLayout>